--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,24 @@ ul{
   margin: 0 auto;
 }
 
+.menu__btn{
+    display: none;
+    width: 30px;
+    height: 25px;
+    border: none;
+    background-color: transparent;
+    padding: 0;
+    border-radius: 0;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.menu__btn span{
+   height: 1px;
+   background-color: #7B6152; 
+   width: 100%;
+}
+
 .header {
   /* цвет бэкраунда через переменную */
   /* background-color:  var(--unnamed, #FFF8F3);; */
@@ -103,4 +121,93 @@ ul{
 .footer__socil{
     display: flex;
     gap: 15px;
+}
+
+@media(max-width: 1000px){
+    .container{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
+
+@media(max-width: 900px){
+    .footer__inner{
+        flex-wrap: wrap;
+    }
+    .footer__contacts{
+        width: 100%;
+        text-align: center;
+        padding-top: 15px;
+    }
+    .footer__socil{
+        justify-content: center;
+    }
+}
+
+@media(max-width: 768px){
+    body{
+        font-size: 10px;
+    }
+    .container{
+        max-width: 640px;
+    }
+    /* уменьшаем картинку трубки при 768пх */
+    .phone::before{
+        width: 14px;
+        height: 14px;
+        left: -16px;
+        top: -2px;
+        /* что бы картинка была гибкой и завис от разм экрана */
+        background-size: cover;
+    }
+}
+
+@media(max-width: 640px){
+    .container{
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    .header__menu-list{
+        width: 153px;
+        background-color: #7B6152;
+        color: #FFF8F3;
+        flex-direction: column;
+        gap: 20px 0;
+        padding: 25px 35px 25px 45px;
+        /* размещаем менюшку */
+        position: absolute;
+        left: 0;
+        top: 0;
+        transform: translateY(-110%);
+        transition: transform .5s ease;
+        z-index: 5;
+    }
+    .header__menu-list.menu--open{
+        transform: translateY(0%);
+    }
+    .menu__btn{
+        display: flex;
+    }
+    /* меняем местами телефон и бургер меню */
+    .header__menu{
+        order: 1;
+    }
+}
+
+@media(max-width: 500px){
+    .footer{
+        padding: 50px 0;
+        font-size: 14px;
+    }
+    .footer__inner{
+        flex-direction: column;
+    }
+    .footer__menu{
+        padding: 50px 0;
+        text-align: center;
+    }
+    .footer__menu-list{
+        flex-direction: column;
+    }
+
 }
