--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@ html {
 body {
   color:  #000;
   font-family: 'Comfortaa', cursive;
-  /* font-family: 'Yeseva One', cursive; */
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -32,6 +31,13 @@ ul{
     list-style: none;
 }
 
+button{
+    border: none;
+    padding: 0;
+    border-radius: 0;
+    cursor: pointer;
+}
+
 .container {
   /* +2 паддинга по 10пх = 1180 */
   /* max-width: 1160px; */
@@ -47,10 +53,7 @@ ul{
     display: none;
     width: 30px;
     height: 25px;
-    border: none;
     background-color: transparent;
-    padding: 0;
-    border-radius: 0;
     flex-direction: column;
     justify-content: space-between;
 }
@@ -97,6 +100,50 @@ ul{
     top: -3px;
 }
 
+.main{
+    background-color: #fff8f3;
+    /* подрезаем картинку при уменьшении без скрола */
+    overflow-x: clip;
+}
+
+.top{
+    padding: 40px 0 150px;
+}
+
+.top__inner{
+    position: relative;
+}
+
+.top__content{
+    width: 370px;
+    padding: 150px 0 250px;
+}
+
+.top__title{
+    font-family: 'Yeseva One', cursive;
+    font-size: 30px;
+    margin-bottom: 15px;
+}
+
+.top__text{
+    margin-bottom: 48px;
+}
+
+.top__buy{
+    font-family: 'Comfortaa', cursive;
+    font-size: 14px;
+    padding: 18px 54px;
+    font-weight: 600;
+    background-color:  #FFBD59;
+}
+
+.top__img{
+    position: absolute;
+    top: 0;
+    left: 240px;
+}
+
+
 .footer{
     padding-top: 40px;
     padding-bottom: 35px;
@@ -127,6 +174,19 @@ ul{
     .container{
         padding-left: 20px;
         padding-right: 20px;
+    }
+    .top__content{
+        width: 333px;
+        padding: 95px 0 70px;
+    }
+    .top__img-l{
+        width: 655px;
+    }
+    .top__img{
+        left: 300px;
+    }
+    .top__text{
+        margin-bottom: 30px;
     }
 }
 
@@ -159,6 +219,20 @@ ul{
         top: -2px;
         /* что бы картинка была гибкой и завис от разм экрана */
         background-size: cover;
+    }
+    .top__content{
+        width: 230px;
+    }
+    .top__title{
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+    .top__text{
+        font-size: 10px;
+        margin-bottom: 20px;
+    }
+    .top__img{
+        left: 180px;
     }
 }
 
@@ -210,4 +284,49 @@ ul{
         flex-direction: column;
     }
 
+}
+
+@media(max-width: 480px){
+    .top__img-l{
+        width: 309px;
+        left: 167px;
+    }
+    .top__content{
+        width: 180px;
+    }
+    .top__title{
+        font-size: 15px;
+        margin-bottom: 15px;
+    }
+    .top__text{
+        font-size: 8px;
+        margin-bottom: 15px;
+    }
+    .top__buy{
+        font-size: 10px;
+        padding: 14px 41px;
+    }
+    .top{
+        padding: 30px 0 50px;
+    }
+}
+
+@media(max-width: 360px){
+    .top__img-l{
+        width: 185px;
+    }
+    .top__img{
+        left: auto;
+        right: 0;
+    }
+    .top__content{
+        width: 200px;
+        padding: 20px 0 0;
+    }
+    .top__title{
+        font-size: 18px;
+    }
+    .top__text{
+        font-size: 10px;
+    }
 }
