--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,67 @@ button{
     left: 240px;
 }
 
+.about{
+    background-color: #A5978E;
+    padding: 50px 0;
+    color: #FAFAFA;
+}
+
+.about__inner{
+    display: flex;
+    align-items: center;
+}
+
+.about__content{
+    min-width: 370px;
+}
+
+.about__title{
+    margin-bottom: 15px;
+    font-size: 40px;
+}
+
+.about__text{
+    margin-bottom: 15px;
+}
+
+.about__list{
+    display: flex;
+    align-items: center;
+    gap: 0 20px;
+    padding-left: 110px;
+    padding-bottom: 48px;
+    flex-basis: 930px;
+    position: relative;
+}
+
+.about__list::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background-image: url(../images/about-dec.png);
+    width: 22px;
+    height: 30px;
+}
+
+.about__list::after{
+    content: "";
+    position: absolute;
+    left: 22px;
+    bottom: 10px;
+    background-color: #7B6152;
+    width: 1000%;
+    height: 1px;
+}
+
+.about__item-img{
+    margin-bottom: 10px;
+}
+
+.about__item-text{
+    font-size: 11px;
+}
 
 .footer{
     padding-top: 40px;
@@ -188,6 +249,12 @@ button{
     .top__text{
         margin-bottom: 30px;
     }
+    .about__content{
+        min-width: 300px;
+    }
+    .about__list{
+        padding-left: 20px;
+    }
 }
 
 @media(max-width: 900px){
@@ -228,11 +295,41 @@ button{
         margin-bottom: 20px;
     }
     .top__text{
-        font-size: 10px;
+        /* font-size: 10px; */
         margin-bottom: 20px;
     }
     .top__img{
         left: 180px;
+    }
+    .about__content{
+        min-width: 200px;
+    }
+    .title{
+        font-size: 15px;
+    }
+    .about__title{
+        margin-bottom: 20px;
+    }
+    .about__list{
+        margin-left: 27px;
+        margin-bottom: 33px;
+        padding-bottom: 25px;
+        gap: 0 6px;
+    }
+    .about__item-text{
+        font-size: 6px;
+    }
+    .about__item-img{
+        margin-bottom: 6px;
+    }
+    .about__item-img--1{
+        width: 120px;
+    }
+    .about__item-img--2{
+        width: 190px;
+    }
+    .about__item-img--3{
+        width: 120px;
     }
 }
 
@@ -309,6 +406,33 @@ button{
     .top{
         padding: 30px 0 50px;
     }
+    .about__content{
+        min-width: 170px;
+    }
+    .about__list{
+        margin-left: 0;
+        padding-left: 10px;
+        gap: 0 5px;
+        align-items: flex-end;
+        margin-bottom: 0;
+        padding-bottom: 50px;
+    }
+    .about__item-text{
+        display: none;
+    }
+    .about__item-img--1,
+    .about__item-img--3{
+        width: 80px;
+    }
+    .about__item-img--2{
+        width: 140px;
+    }
+    .about__list::before {
+        left: 5px;
+    }
+    .about__inner{
+        align-items: flex-end;
+    }
 }
 
 @media(max-width: 360px){
@@ -328,5 +452,27 @@ button{
     }
     .top__text{
         font-size: 10px;
+    }
+    body{
+        font-size: 8px;
+    }
+    .about__content{
+        min-width: 233px;
+    }
+    .title{
+        margin-bottom: 10px;
+    }
+    .about__list{
+        margin-left: 12px;
+        margin-left: 12px;
+        padding-bottom: 30px;
+    }
+    .about{
+        padding-top: 25px;
+        padding-bottom: 10px;
+    }
+    .about__item-img--2,
+    .about__item-img--3{
+        display: none;
     }
 }
