--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,48 @@ button{
     cursor: pointer;
 }
 
+.title{
+    font-weight: 400;
+    margin-bottom: 15px;
+    font-size: 40px;
+}
+
+.section{
+    padding-bottom: 150px;
+}
+
+.button {
+    font-family: 'Comfortaa', cursive;
+    font-size: 14px;
+    padding: 18px 54px;
+    font-weight: 600;
+    background-color:  #FFBD59;
+}
+
+.section--decor{
+    position: relative;
+}
+
+.section--decor::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background-image: url(../images/section-dec.png);
+    width: 22px;
+    height: 30px;
+}
+
+.section--decor::after{
+    content: "";
+    position: absolute;
+    left: 22px;
+    bottom: 10px;
+    background-color: #7B6152;
+    width: 1000%;
+    height: 1px;
+}
+
 .container {
   /* +2 паддинга по 10пх = 1180 */
   /* max-width: 1160px; */
@@ -123,6 +165,7 @@ button{
     font-family: 'Yeseva One', cursive;
     font-size: 30px;
     margin-bottom: 15px;
+    font-weight: 400;
 }
 
 .top__text{
@@ -147,6 +190,8 @@ button{
     background-color: #A5978E;
     padding: 50px 0;
     color: #FAFAFA;
+    margin-bottom: 150px;
+
 }
 
 .about__inner{
@@ -156,11 +201,6 @@ button{
 
 .about__content{
     min-width: 370px;
-}
-
-.about__title{
-    margin-bottom: 15px;
-    font-size: 40px;
 }
 
 .about__text{
@@ -174,27 +214,6 @@ button{
     padding-left: 110px;
     padding-bottom: 48px;
     flex-basis: 930px;
-    position: relative;
-}
-
-.about__list::before{
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    background-image: url(../images/about-dec.png);
-    width: 22px;
-    height: 30px;
-}
-
-.about__list::after{
-    content: "";
-    position: absolute;
-    left: 22px;
-    bottom: 10px;
-    background-color: #7B6152;
-    width: 1000%;
-    height: 1px;
 }
 
 .about__item-img{
@@ -204,6 +223,54 @@ button{
 .about__item-text{
     font-size: 11px;
 }
+
+.section__inner{
+    display: grid;
+    grid-template-columns: 370px auto;
+}
+
+.section__content-descr{
+    display: grid;
+    grid-template-columns: auto auto;
+    padding-bottom: 92px;
+}
+
+.products__content{
+    gap: 50px 90px;
+}
+
+.products__item{
+    width: 290px;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.products__item-img{
+    margin-bottom: 8px;
+}
+
+.products__item-price {
+    margin-bottom: 12px;
+    font-size: 16px;
+    font-family: 'Yeseva One', cursive;
+    font-weight: 400;
+
+}
+
+.products__item-title {
+    margin-bottom: 16px;
+    font-size: 16px;
+    font-family: 'Yeseva One', cursive;
+    font-weight: 400;
+}
+
+.products__item-text {
+    margin-bottom: 27px;
+    font-size: 12px;
+}
+
+
+
 
 .footer{
     padding-top: 40px;
@@ -255,6 +322,16 @@ button{
     .about__list{
         padding-left: 20px;
     }
+    .section__inner {
+        grid-template-columns: 290px auto;
+        gap: 0 10px;
+    }
+    .products__content {
+        gap: 67px;
+    }
+    .section__text{
+        font-size: 10px;
+    }
 }
 
 @media(max-width: 900px){
@@ -268,6 +345,12 @@ button{
     }
     .footer__socil{
         justify-content: center;
+    }
+    .section__inner {
+        grid-template-columns: 200px auto;
+    }
+    .products__content {
+        gap: 30px 16px;
     }
 }
 
@@ -331,6 +414,31 @@ button{
     .about__item-img--3{
         width: 120px;
     }
+    .products__item {
+        width: 200px;
+    }
+    .products__item-img {
+        width: 200px;
+        margin-bottom: 6px;
+    }
+    .button {
+        font-size: 12px;
+    }
+    .products__item-text {
+        font-size: 8px;
+        margin-bottom: 18px;
+    }
+    .products__item-price{
+        font-size: 12px;
+        margin-bottom: 7px;
+    }
+    .products__item-title{
+        font-size: 12px;
+        margin-bottom: 9px;
+    }
+    .button{
+        padding: 10px 26px;
+    }
 }
 
 @media(max-width: 640px){
@@ -362,6 +470,13 @@ button{
     /* меняем местами телефон и бургер меню */
     .header__menu{
         order: 1;
+    }
+    .section__inner{
+        display: block;
+    }
+    .section__descr{
+        margin-bottom: 30px;
+        text-align: center;
     }
 }
 
@@ -433,6 +548,19 @@ button{
     .about__inner{
         align-items: flex-end;
     }
+    .about{
+        margin-bottom: 50px;
+    }
+    .section {
+        padding-bottom: 50px;
+    }
+    .section__content-descr {
+        padding-bottom: 62px;
+    }
+    .section__descr{
+        margin: 0 auto 30px;
+        width: 300px;
+    }
 }
 
 @media(max-width: 360px){
@@ -474,5 +602,32 @@ button{
     .about__item-img--2,
     .about__item-img--3{
         display: none;
+    }
+    .section__descr{
+        margin: 0 auto 25px;
+        width: 235px;
+    }
+    .products__item {
+        width: 150px;
+    }
+    .products__content {
+        gap: 40px 7px;
+    }
+    .products__item-img {
+        width: 150px;
+    }
+    .button{
+        font-size: 8px;
+        padding: 8px 20px;
+    }
+    .products__item-price{
+        font-size: 10px;
+        margin-bottom: 5px;
+    }
+    .products__item-title{
+        font-size: 10px;
+    }
+    .products__item-text{
+        margin-bottom: 16px;
     }
 }
