--- a/css/style.css
+++ b/css/style.css
@@ -313,7 +313,42 @@ button{
     padding-bottom: 40px;
 }
 
+.courses__item-img{
+    position: relative;
+    font-family: 'Yeseva One', cursive;
+    color: #fff;
+    font-size: 11px;
+}
 
+.courses__title {
+    padding: 15px;
+    left: 10px;
+    top: 45%;
+}
+
+.courses__time {
+    padding: 7px 10px;
+    left: 10px;
+    top: 60%;
+}
+
+.courses__time span{
+    font-size: 10px;
+    font-family: 'Comfortaa', cursive;
+}
+
+.courses__prise {
+    padding: 19px 10px;
+    right: 2px;
+    bottom: 0px;
+}
+
+.courses__title,
+.courses__time,
+.courses__prise{
+    background-color: #BEA495;
+    position: absolute;
+}
 
 
 .footer{
@@ -343,18 +378,6 @@ button{
 }
 
 @media(max-width: 1074px){
-    .steps__list {
-        gap: 37px 35px;
-    }
-    .steps__item{
-        gap: 0 30px;
-    }
-    .steps__item-img{
-        width: 129px;
-    }
-}
-
-@media(max-width: 1000px){
     .container{
         padding-left: 20px;
         padding-right: 20px;
@@ -390,6 +413,15 @@ button{
     }
     .steps__list {
         gap: 37px 35px;
+    }
+    .steps__list {
+        gap: 37px 35px;
+    }
+    .steps__item{
+        gap: 0 30px;
+    }
+    .steps__item-img{
+        width: 129px;
     }
 }
 
@@ -429,6 +461,25 @@ button{
     }
     .steps__item::before{
         font-size: 20px;
+    }
+}
+
+@media(max-width: 820px){
+    .courses__title {
+        padding: 6px;
+        left: 10px;
+        top: 42%;
+    }
+    .courses__time {
+        padding: 5px 6px;
+        left: 10px;
+        top: 53%;
+    }
+    .courses__prise {
+        padding: 16px 7px;
+    }
+    .products__item-img {
+        
     }
 }
 
@@ -492,10 +543,10 @@ button{
     .about__item-img--3{
         width: 120px;
     }
-    .products__item {
+    .products__item--1 {
         width: 200px;
     }
-    .products__item-img {
+    .products__item-img--1 {
         width: 200px;
         margin-bottom: 6px;
     }
@@ -657,9 +708,7 @@ button{
     .steps__item-text {
         font-size: 6px;
     }
-}
-
-@media(max-width: 360px){
+    /*  */
     .top__img-l{
         width: 185px;
     }
@@ -703,13 +752,13 @@ button{
         margin: 0 auto 25px;
         width: 235px;
     }
-    .products__item {
+    .products__item--1 {
         width: 150px;
     }
     .products__content {
         gap: 40px 7px;
     }
-    .products__item-img {
+    .products__item-img--1 {
         width: 150px;
     }
     .button{
@@ -725,5 +774,31 @@ button{
     }
     .products__item-text{
         margin-bottom: 16px;
+    }
+
+}
+@media(max-width: 420px){
+    .courses__content{
+        grid-template-columns: auto;
+    }
+    .courses__item,
+    .courses__item-img{
+        width: 255px;
+        margin-bottom: 22px;
+    }
+    .courses__title {
+        padding: 6px 5px;
+        left: 1px;
+        top: 43%;
+    }
+    .courses__time {
+        padding: 6px 5px;
+        left: 1px;
+        top: 54%;
+    }
+    .courses__prise {
+        padding: 13px 13px;
+        right: -18px;
+        bottom: 4px;
     }
 }
