--- a/css/style.css
+++ b/css/style.css
@@ -350,6 +350,41 @@ button{
     position: absolute;
 }
 
+.team{
+    background-color: #A5978E;
+    padding: 80px 0 60px;
+    color: #fff;
+    margin-bottom: 150px;
+}
+
+.team__content{
+    padding-bottom: 0;
+    gap: 75px;
+}
+
+.team__item{
+    position: relative;
+}
+
+.team__item-box{
+    position: absolute;
+    background-color: #7B6152;
+    text-align: center;
+    padding: 15px 10px 16px;
+    width: 165px;
+    z-index: 4;
+    bottom: 13px;
+    right: 33px;
+}
+
+.team__item-name{
+    font-family: 'Yeseva One', cursive;
+    font-size: 12px;
+}
+
+.team__item-descr{
+    font-size: 10px;
+}
 
 .footer{
     padding-top: 40px;
@@ -423,9 +458,20 @@ button{
     .steps__item-img{
         width: 129px;
     }
+    .steps__title {
+        font-size: 37px;
+    }
 }
 
-@media(max-width: 940px){
+@media(max-width: 1000px){
+    .team__content {
+        padding-bottom: 0;
+        gap: 30px 20px;
+    }
+}
+
+
+@media(max-width: 967px){
     .footer__inner{
         flex-wrap: wrap;
     }
@@ -464,24 +510,50 @@ button{
     }
 }
 
-@media(max-width: 820px){
+@media(max-width: 823px){
     .courses__title {
-        padding: 6px;
-        left: 10px;
+        padding: 6px 6px;
+        left: 13px;
         top: 42%;
     }
     .courses__time {
-        padding: 5px 6px;
-        left: 10px;
-        top: 53%;
+        padding: 6px 6px;
+        left: 13px;
+        top: 58%;
     }
     .courses__prise {
-        padding: 16px 7px;
+        padding: 10px 6px;
+        right: 2px;
     }
-    .products__item-img {
-        
+
+    .products__item-img--1 {
+        width: 230px;
+        margin-bottom: 9px;
+    }
+
+    .courses__item{
+        width: 222px;
+    }
+    .products__item-img{
+      width: 195px;  
+    }
+    .team__img{
+        width: 140px;
+    }
+    .team__item-box{
+        width: 109px;
+        padding: 9px 6px 10px;
+        bottom: 8px;
+        right: -16px;
+    }
+    .team__item-name{
+        font-size: 8px;
+    }
+    .team__item-descr{
+        font-size: 7px;
     }
 }
+
 
 @media(max-width: 768px){
     body{
@@ -569,6 +641,28 @@ button{
         padding: 10px 26px;
     }
 }
+@media(max-width: 730px){
+    .courses__item{
+        width: 190px;
+    }
+    .products__item-img{
+      width: 195px;  
+    }
+    .courses__title {
+        padding: 5px 4px;
+        left: 0px;
+        top: 43%;
+    }
+    .courses__time {
+        padding: 3px 3px;
+        left: 0px;
+        top: 58%;
+    }
+    .courses__prise {
+        padding: 6px 4px;
+        right: -10px;
+    }
+}
 
 @media(max-width: 640px){
     .container{
@@ -606,6 +700,10 @@ button{
     .section__descr{
         margin-bottom: 30px;
         text-align: center;
+    }
+    .team__item-box {
+        right: auto;
+        left: 80px;
     }
 }
 
@@ -775,9 +873,6 @@ button{
     .products__item-text{
         margin-bottom: 16px;
     }
-
-}
-@media(max-width: 420px){
     .courses__content{
         grid-template-columns: auto;
     }
@@ -787,18 +882,37 @@ button{
         margin-bottom: 22px;
     }
     .courses__title {
-        padding: 6px 5px;
-        left: 1px;
-        top: 43%;
+        padding: 5px 5px;
+        left: 29px;
+        top: 40%;
     }
     .courses__time {
-        padding: 6px 5px;
-        left: 1px;
-        top: 54%;
+        padding: 4px 4px;
+        left: 29px;
+        top: 57%;
     }
     .courses__prise {
-        padding: 13px 13px;
-        right: -18px;
-        bottom: 4px;
+        padding: 10px 10px;
+        right: 19px;
+        bottom: 5px;
     }
+
+    .team__content{
+        grid-template-columns: auto;
+    }
+    .team__img{
+        width: 204px;
+    }
+    .team__item-name{
+        font-size: 12px;
+    }
+    .team__item-descr{
+        font-size: 10px;
+    }
+    .team__item-box{
+        width: 150px;
+        bottom: 15px;
+        left: 148px;
+    }
+
 }
