section promo/contacts-html/css

--- a/css/style.css
+++ b/css/style.css
@@ -482,6 +482,86 @@ button{
     text-align: left;
 }
 
+.promo{
+    background-image: url(../images/promo-bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding: 140px 0;
+}
+
+.promo__inner{
+    display: flex;
+    align-items: center;
+}
+
+.promo__text{
+    font-size: 40px;
+    font-family: 'Yeseva One', cursive;
+    color: #fff;
+    padding-left: 56px;
+    max-width: 860px;
+    margin-right: 110px;
+}
+
+.promo__link{
+    color: #272727;
+    background-color: #FFBD59;
+    display: inline-block;
+    padding: 14px 25px 12px;
+}
+
+.contacts{
+    padding: 150px 0 50px;
+}
+
+.contacts__inner{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.form{
+    background-color: #fff;
+    width: 664px;
+    padding: 75px 42px 67px;
+}
+
+.form__title{
+    font-family: 'Yeseva One', cursive;
+    margin-bottom: 60px;
+    color: #000;
+    font-size: 40px;
+}
+
+.form__input{
+    background-color: #fff;
+    border: none;
+    border-bottom: 1px solid #000;
+    width: 100%;
+    display: block;
+    margin-bottom: 15px;
+    padding: 7px 10px;
+    color: #000;
+}
+
+.form__input::placeholder{
+    color: #B3B3B3;
+    font-family: Comfortaa;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+}
+
+.form__btn{
+    color: #272727;
+    font-family: Comfortaa;
+    background-color: #FFBD59;
+    padding: 17px 34px; 
+    font-size: 14px;
+    margin-top: 36px;
+}
+
 .footer{
     padding-top: 40px;
     padding-bottom: 35px;
