--- a/css/style.css
+++ b/css/style.css
@@ -598,6 +598,16 @@ button{
     .sertificates__slider{
         width: 880px;
     }
+    .promo__link{
+        min-width: 135px;
+        text-align: center;
+    }
+    .promo__text{
+        padding-left: 0;
+    }
+    .contacts__img{
+        width: 335px;
+    }
 }
 
 @media(max-width: 1074px){
@@ -664,6 +674,9 @@ button{
     }
     .sertificates__content .swiper-pagination {
         text-align: center;
+    }
+    .form {
+        width: 610px;
     }
 }
 
@@ -874,7 +887,33 @@ button{
     .button{
         padding: 10px 26px;
     }
+    .promo__text{
+        font-size: 15px;
+    }
+    .promo__link{
+        font-size: 12px;
+    }
+    .promo{
+        padding: 67px 0;
+    }
+    .contacts__img{
+        width: 187px;
+        object-fit: cover;
+    }
+    .form{
+        width: 440px;
+        gap: 0 20px;
+        padding: 30px 22px;
+    }
+    .form__title{
+        font-size: 15px;
+        margin-bottom: 20px;
+    }
+    .form__btn{
+        margin-top: 10px;
+    }
 }
+
 @media(max-width: 730px){
     .courses__item{
         width: 190px;
@@ -1041,6 +1080,21 @@ button{
         width: 415px;
         margin: 0 auto;
     }
+    .promo{
+        padding: 42px 0;
+    }
+    .contacts__img{
+        display: none;
+    }
+    .form__input::placeholder{
+        font-size: 10px;
+    }
+    .contacts__inner {
+        justify-content: center;
+    }
+    .contacts{
+        padding-top: 50px;
+    }
 }
 
 @media(max-width: 440px){
@@ -1198,6 +1252,10 @@ button{
     }
     .sertificates__slider {
         width: 200px;
+    }
+
+    .promo__text{
+        margin-right: 50px;
     }
 
 }
