--- a/css/style.css
+++ b/css/style.css
@@ -482,6 +482,41 @@ button{
     text-align: left;
 }
 
+.accordeon{
+
+}
+
+.accordeon__item{
+    background-color: #FAFAFA;
+    margin-bottom: 10px;
+}
+
+.accordeon__title{
+    font-family: 'Yeseva One', cursive;
+    font-size: 16px;
+    display: block;
+    background-color: transparent;
+    padding: 16px 50px 16px 13px;
+    position: relative;
+    width: 100%;
+    text-align: left;
+}
+
+.accordeon__title::after{
+    content: '';
+    background-image: url(../images/arrow.svg);
+    width: 16px;
+    height: 16px;
+    position: absolute;
+    right: 26px;
+    top: 17px;
+}
+
+.accordeon__text{
+    display: none;
+    padding: 20px 40px;
+}
+
 .promo{
     background-image: url(../images/promo-bg.jpg);
     background-repeat: no-repeat;
